--- a/src/assets/sass/_screen.scss
+++ b/src/assets/sass/_screen.scss
@@ -298,7 +298,7 @@ nav {
 	}
 }
 #modal {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
 	bottom: 0;
@@ -333,7 +333,8 @@ nav {
 	#photos,
 	#tour {
 		display: none;
-		overflow: scroll;
+		overflow-y: scroll;
+  		-webkit-overflow-scrolling: touch;
 		height: 100%;
 		&.show {
 			display: flex;
@@ -451,6 +452,8 @@ nav {
 		}
 		img {
 			max-width: 100%;
+			display: block;
+			margin: 0 auto;
 			height: auto;
 		}
 	}
